created router and navbar

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container text-center">
+    <span class="text-white">Scalet 2024</span>
+  </div>
+</footer>
