--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer bg-dark w-100 fixed-bottom p-3">
   <div class="container text-center">
     <span class="text-white">Scalet 2024</span>
   </div>
