--- a/src/app/components/authors/authors.component.html
+++ b/src/app/components/authors/authors.component.html
@@ -1,40 +1,66 @@
-<div class="d-flex justify-content-center align-items-center text-center vh-100">
-  <div class="card text-white bg-dark p-5">
-    <form>
-      <h1 class="mb-3">Author Registration</h1>
-      <div class="row mb-3">
-        <div class="input-group col">
-          <input class="form-control" type="text" name="name" id="name" placeholder="Enter the name">
-          <span class="input-group-text"><i class="bi bi-card-text"></i></span>
-        </div>
-      </div>
-      <div class="row mb-3">
-        <div class="input-group col">
-          <input class="form-control" type="text" name="nationality" id="nationality"
-            placeholder="Enter the nationality">
-          <span class="input-group-text"><i class="bi bi-globe-americas"></i></span>
-        </div>
-      </div>
-      <div class="row mb-3">
-        <div class="input-group col">
-          <input class="form-control" type="text" name="pseudonym" id="pseudonym" placeholder="Enter the pseudonym">
-          <span class="input-group-text"><i class="bi bi-person"></i></span>
-        </div>
-      </div>
-      <div class="row mb-3">
-        <div class="input-group col">
-          <input class="form-control" type="date" name="date" id="date">
-        </div>
-        <div class="input-group col">
-          <div class="btn-group col-12" role="group" aria-label="Basic checkbox toggle button group">
-            <input type="checkbox" class="btn-check" id="awarded" autocomplete="off">
-            <label class="btn btn-outline-danger" for="awarded"><i class="bi bi-award"></i> awarded <i class="bi bi-award"></i></label>
+<div class="vh-100 bg-dark">
+  <div class="d-flex justify-content-center align-items-center text-center">
+    <div class="text-white bg-dark p-5">
+      <form [formGroup]="authorFormGroup">
+        <h1 class="mb-3">Author Registration</h1>
+        <div class="row mb-3">
+          <div class="input-group col">
+            <input class="form-control" formControlName="name" type="text" name="name" id="name" placeholder="Enter the name">
+            <span class="input-group-text"><i class="bi bi-card-text"></i></span>
           </div>
         </div>
-      </div>
-      <div class="row mx-auto mb-3">
-        <button class="btn btn-light" type="submit">save <i class="bi bi-box-arrow-in-right"></i></button>
-      </div>
-    </form>
+        <div class="row mb-3">
+          <div class="input-group col">
+            <input class="form-control" formControlName="pseudonym" type="text" name="pseudonym" id="pseudonym" placeholder="Enter the pseudonym">
+            <span class="input-group-text"><i class="bi bi-person"></i></span>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="input-group col">
+            <input class="form-control" formControlName="date" type="date" name="date" id="date">
+          </div>
+          <div class="input-group col">
+            <div class="btn-group col-12" role="group" aria-label="Basic checkbox toggle button group">
+              <input type="checkbox" formControlName="awarded" class="btn-check" id="awarded" autocomplete="off">
+              <label class="btn btn-outline-danger" for="awarded"><i class="bi bi-award"></i> awarded <i class="bi bi-award"></i></label>
+            </div>
+          </div>
+        </div>
+        <div class="row mb-3">
+          <div class="input-group col">
+            <input class="form-control" formControlName="nationality" type="text" name="nationality" id="nationality"
+              placeholder="Enter the nationality">
+            <span class="input-group-text"><i class="bi bi-globe-americas"></i></span>
+          </div>
+        </div>
+        <div class="row mx-auto mb-3">
+          <button class="btn btn-light" (click)="save()" type="submit">save <i class="bi bi-box-arrow-in-right"></i></button>
+        </div>
+      </form>
+      <h1 class="mb-3">Author</h1>
+      <table class="table table-dark table-striped">
+        <thead>
+          <tr class="p-3">
+            <th scope="col">id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Nationality</th>
+            <th scope="col">Pseudonym</th>
+            <th scope="col">Date</th>
+            <th scope="col">Awarded</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr  *ngFor="let author of authors">
+            <th scope="row">{{author.id}}</th>
+            <td>{{author.name}}</td>
+            <td>{{author.nationality}}</td>
+            <td>{{author.pseudonym}}</td>
+            <td>{{author.date}}</td>
+            <td>{{author.awarded}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
+
 </div>
