--- a/src/app/components/authors/authors.component.html
+++ b/src/app/components/authors/authors.component.html
@@ -1,6 +1,6 @@
 <div class="vh-100 bg-dark">
   <div class="d-flex justify-content-center align-items-center text-center">
-    <div class="text-white bg-dark p-5">
+    <div class="text-white bg-dark p-5 mt-5">
       <form [formGroup]="authorFormGroup">
         <h1 class="mb-3">Author Registration</h1>
         <div class="row mb-3">
