--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -1,5 +1,5 @@
 <div class="vh-100 bg-dark">
-  <div class="d-flex justify-content-center align-items-center text-center bg-dark">
+  <div class="d-flex justify-content-center align-items-center text-center">
     <div class="text-white bg-dark p-5 mt-5">
       <form [formGroup]="bookFormGroup">
         <h1 class="mb-3">Book Registration</h1>
