book validations forms

--- a/src/app/components/authors/authors.component.html
+++ b/src/app/components/authors/authors.component.html
@@ -41,7 +41,7 @@
           <button class="btn btn-light" (click)="save()" type="submit">save <i class="bi bi-box-arrow-in-right"></i></button>
         </div>
       </form>
-      <h1 class="mb-5">Author</h1>
+      <h1 class="mb-5">Authors</h1>
       <table class="table table-dark table-striped">
         <thead>
           <tr class="p-3">
