--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -32,22 +32,31 @@
         </div>
         <div class="row mb-3">
           <div class="input-group col">
-            <input class="form-control" type="text" formControlName="year" name="year" id="year"
+            <input class="form-control" type="number" formControlName="year" name="year" id="year"
               placeholder="book year">
             <span class="input-group-text"><i class="bi bi-calendar"></i></span>
           </div>
           <div class="input-group col">
-            <select class="form-control" name="rating" id="rating" formControlName="rating">
-              <option value="" disabled selected>Rate the book</option>
-              <option [value]="rating" *ngFor="let rating of ratings">{{rating}}</option>
-            </select>
-            <span class="input-group-text"><i class="bi bi-award"></i></span>
+            <span class="input-group-text">rating</span>
+            <div class="btn-group" role="group" aria-label="Book rating">
+              <div class="mx -100" *ngFor="let rating of ratings; let i = index">
+                <input type="radio" formControlName="rating" value="{{rating}}" class="btn-check" name="btnradio"
+                  id="{{rating}}" autocomplete="off">
+                <label class="btn btn-outline-light" for="{{rating}}">{{i + 1}}</label>
+              </div>
+            </div>
           </div>
           <div class="row">
             <small class="text-danger text-start"
-              *ngIf="isSubmiting && (year.hasError('required') || rating.hasError('required'))">{{year.hasError('required')
-              && rating.hasError('required') ? "*Year and rating is required" : year.hasError('required') ? "*Year is
-              required" : "*Rating is required"}}</small>
+              *ngIf="isSubmiting && (year.hasError('required') && rating.hasError('required')); else yearCondition">year
+              and rating</small>
+            <ng-template #yearCondition>
+              <small class="text-danger text-start"
+                *ngIf="isSubmiting && year.hasError('required'); else ratingCondition">year</small>
+            </ng-template>
+            <ng-template #ratingCondition>
+              <small class="text-danger text-start" *ngIf="isSubmiting && rating.hasError('required')">rating</small>
+            </ng-template>
           </div>
         </div>
         <div class="row mb-3">
